2009-11-11 John Mair (Banisterfiend)
* version 0.1.9.0 re-release
* REMOVED ILUT (OpenGL) support because ILUT is not built with OpenGL support on all platforms (e.g gentoo and some ubuntu distros)

2009-11-10 John Mair (Banisterfiend)
* version 0.1.9.0
* added ILUT (OpenGL) support
* updated installation info (no longer using c:\windows\system\ for dlls)

2009-10-29 John Mair (Banisterfiend)
* version 0.1.8.8
* added Devil.with_group (for loading multiple images into the same block)
* all images passed into block are cleaned up at end of block
* images at end of block are only free'd if they have not already been freed by user
* ruby_il.c: added IMAGE_BITS_PER_PIXEL and IMAGE_BYTES_PER_PIXEL constants
* finalizers still not implemented

2009-10-28 John Mair (Banisterfiend)
* removed finalizer and replaced with explicit call to image.free at end of block. If no block is used, user must call image.free at end of use
* above fixes memory leak.
* changed STR2CSTR() to StringValuePtr() in ruby_il.c

2009-10-28 John Mair (Banisterfiend)
* added IL::ConvertImage(IL::RGBA, IL::UNSIGNED_BYTE) to Devil#load; ensures that all image data is in the same format (image files only support RGB/UB and RGBA/UB so make them all RGBA/UB)
* changed compile-time conditional for the IL_LBM constant. now checks if IL_LBM is defined before it tries IL_ILBM

2009-10-25 John Mair (Banisterfiend)
version 0.1.8.5
* added hooks: prepare_image_hook, create_image_hook, load_image_hook 
* e.g Devil.set_options :load_image_hook => proc { IL::ConvertImage(IL::RGBA, IL::UNSIGNED_BYTE) }
* added Devil.create_image() method for creating blank images (useful as a blitting canvas?)
* added :color parameter to create_image (to set background color of new image)
* added :in_profile and :out_profile to Devil.load_image and Devil.create_image
* color profiles do not appear to work! so not officially supported or documented.
* fixed gosu image flip bug
* added more tests and rdoc
